--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
 }
 
 code {
@@ -56,4 +57,58 @@ nav {
   width: 100%;
   height: 100vh;
   padding-top: 10vh;
+}
+
+#about{
+  display: grid;
+  grid-template-areas: 'left left right';
+}
+
+#about>.left{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-area: left;
+}
+
+#about>.right{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-area: right;
+}
+
+#about>.right>div{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  border-radius: 5px;
+  border: 2px solid black;
+  width: 75%;
+  padding: 25% 10%;
+}
+
+#about>.right>div>*{
+  padding: 0;
+  margin-bottom: 20px;
+}
+.btn{
+  font: 10px;
+  text-decoration: none;
+  background-color: #3f3ea5;
+  color: #ffffff;
+  padding: 5px 10px;
+  border: 2px solid black;
+  border-radius: 3px;
+}
+
+.btn:hover{
+  border: 1px solid black;
+  color: black;
+}
+
+.full-logo{
+  width: 80%;
+  height: auto;
 }
