--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,8 @@ nav {
   width: 100%;
   height: 100vh;
   padding-top: 8vh;
+  justify-content: center;
+  align-items: center;
 }
 
 #about{
@@ -112,3 +114,10 @@ nav {
   width: 50%;
   height: auto;
 }
+.notification{
+  padding-top: 9vh;
+  text-align: center;
+  width: 100%;
+  height: 4vh;
+}
+
