--- a/src/index.css
+++ b/src/index.css
@@ -121,3 +121,106 @@ nav {
   height: 4vh;
 }
 
+.market-page{
+  width: 100%;
+  height: 100vh;
+  padding-top: 8vh;
+  display: grid;
+  grid-template-areas:
+  'search search total'
+  'card card total'
+  'card card chart'
+  'card card chart'
+  'card card chart'
+  'card card chart';
+}
+
+.search-container{
+  grid-area: search;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-container{
+  grid-area: card;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.totals-container{
+  grid-area: total;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.card-container{
+  grid-area: card;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap:10px; /* even spacing using grid-gap, You can use percentage values if you want*/
+  padding:10px;
+}
+
+.chart-container{
+  grid-area: chart;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.crypto-card{
+  margin: auto;
+  padding: 10px;
+  display: grid;
+  grid-template-areas:
+  'name name image'
+  'hr hr hr'
+  'price price price'
+  'market market market'
+  'change change change'
+  ;
+  width: 150px;
+  height: 150px;
+  border: 2px solid black;
+  cursor: pointer;
+}
+
+.crypto-card>*{
+  margin: 0;
+  padding: 0;
+}
+
+.crypto-card>h5{
+  grid-area: name;
+}
+
+.crypto-card>img{
+  grid-area: image;
+  width: 15px;
+  height: 15px;
+}
+
+.crypto-card>hr{
+  grid-area: hr;
+}
+
+.crypto-card>#price{
+  grid-area: price;
+}
+
+.crypto-card>#market{
+  grid-area: market;
+}
+
+.crypto-card>#change{
+  grid-area: change;
+}
+
+.crypto-card>p{
+  font-size: small;
+}
