--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ nav {
 	width: 100%;
 	height: 8vh;
 	position: fixed;
+	top: 0;
 	background-color: #1f20222d;
 }
 
@@ -313,4 +314,30 @@ nav {
 .modal_body {
 	height: 400px;
 	overflow: scroll;
+}
+
+/* Log pages */
+.logPage {
+	display: flex;
+	justify-content: center;
+}
+.logContainer {
+	margin-top: 15vh;
+	text-align: center;
+	border: 1px solid black;
+	padding: 10px;
+	width: 50%;
+	border-radius: 10px;
+}
+.logSubmit {
+	margin-top: 10px;
+	width: 120px;
+}
+.logSubmit:hover {
+	border: 2px solid black;
+	color: white;
+}
+.logLabels {
+	font-size: 14px;
+	margin-top: 20px;
 }
