--- a/src/index.css
+++ b/src/index.css
@@ -265,7 +265,7 @@ nav {
 
 /* Send eth */
 #exchange_cont {
-	margin-top: 30vh;
+	margin-top: 15vh;
 }
 .exchange_filters {
 	display: flex;
@@ -299,6 +299,7 @@ nav {
 .exchange_button {
 	background-color: var(--main-blue);
 	width: 100%;
+	border-radius: 5px;
 	color: white;
 }
 .exchange_button:hover,
@@ -334,7 +335,7 @@ nav {
 /* Swap Crypto */
 
 .chain_filters {
-	margin: 10px 0;
+	margin: 10px 0 30px 0;
 }
 .swapforms {
 	overflow: hidden;
@@ -365,9 +366,6 @@ nav {
 .swapform_top {
 	margin-bottom: 1px;
 }
-.swapform_bottom {
-	margin-bottom: 10px;
-}
 .token_select:hover {
 	background-color: hsl(0, 0%, 36%);
 	cursor: pointer;
@@ -385,6 +383,15 @@ nav {
 }
 .token_image {
 	width: 40px;
+}
+#swap_fees_cont {
+	height: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+#swap_fees {
+	font-size: 13px;
 }
 /* Modal */
 .modal_body {
@@ -405,9 +412,10 @@ nav {
 .logContainer {
 	margin-top: 15vh;
 	text-align: center;
-	border: 1px solid black;
+	background-color: #dbdada;
+	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 	padding: 10px;
-	width: 50%;
+	width: 30%;
 	border-radius: 10px;
 }
 .logSubmit {
