--- a/src/index.css
+++ b/src/index.css
@@ -102,16 +102,15 @@ nav {
 	background-color: var(--gray-element);
 	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 	padding: 10px;
-	width: 30%;
 	border-radius: 5px;
-	width: 75%;
+	width: 70%;
 	padding: 40px;
 }
 #about_cont_title {
 	margin-bottom: 15px;
 }
 #logo_text {
-	width: 70%;
+	width: 190px;
 	margin-bottom: 15px;
 }
 .btn {
