--- a/src/index.css
+++ b/src/index.css
@@ -351,7 +351,17 @@ nav {
 /* Swap Crypto */
 
 .chain_filters {
-	margin: 10px 0 30px 0;
+	margin-top: 10px;
+}
+#swap_bookmark {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 30px;
+	width: 100%;
+}
+#swap_bookmark_text {
+	font-size: 13px;
 }
 .swapforms {
 	overflow: hidden;
