--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ nav {
 	height: 8vh;
 	position: fixed;
 	top: 0;
-	background-color: #1f20222d;
+	background-color: rgb(218, 218, 218);
 }
 
 .nav-bar {
@@ -83,7 +83,13 @@ nav {
 }
 #about {
 	display: grid;
-	grid-template-areas: 'left left right';
+	grid-template-columns: 1fr 1fr;
+	grid-template-areas: 'left right';
+}
+@media (max-width: 400px) {
+	#about {
+		grid-template-areas: 'left' 'right';
+	}
 }
 #about > .left {
 	display: flex;
@@ -126,7 +132,7 @@ nav {
 	background-color: hsl(240, 70%, 40%);
 }
 .full-logo {
-	width: 50%;
+	width: 300px;
 	height: auto;
 }
 #about_button {
@@ -223,6 +229,7 @@ nav {
 	align-items: center;
 	width: 100%;
 	height: 50vh;
+	background-color: #0f0f44;
 }
 
 .crypto-card {
@@ -455,4 +462,74 @@ nav {
 .logLabels {
 	font-size: 14px;
 	margin-top: 20px;
+}
+
+/* Bookmarks */
+
+/* Cards */
+#card_image {
+	width: 100%;
+	cursor: pointer;
+	transition: all 0.3s ease-in-out 0s;
+}
+.circle-tile {
+	text-align: center;
+
+	flex: 0 0 auto;
+}
+.scrolling-wrapper {
+	display: flex;
+	flex-wrap: nowrap;
+	overflow-x: auto;
+	-webkit-overflow-scrolling: touch;
+	cursor: grab;
+}
+.scrolling-wrapper::-webkit-scrollbar {
+	display: none;
+}
+.circle-tile-image-cont {
+	border-radius: 100%;
+	color: #ffffff;
+	margin: 0 auto -40px;
+	position: relative;
+	width: 80px;
+	height: 80px;
+	background-color: whitesmoke;
+}
+
+.circle-tile-heading {
+	display: flex;
+	justify-content: center;
+	width: 150px;
+}
+.circle-tile-image:hover {
+	-webkit-filter: brightness(50%);
+	filter: brightness(50%);
+}
+.circle-tile-content {
+	padding-top: 40px;
+	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+	border-radius: 5px;
+	width: 150px;
+}
+.circle-tile-title {
+	font-size: 25px;
+	text-transform: uppercase;
+}
+.circle-tile-footer {
+	background-color: rgba(0, 0, 0, 0.1);
+	display: block;
+	padding: 5px;
+	transition: all 0.3s ease-in-out 0s;
+}
+.circle-tile-footer:hover {
+	background-color: rgba(0, 0, 0, 0.4);
+	color: white;
+	cursor: pointer;
+}
+.card-num {
+	font-size: 15px;
+}
+.card-num-label {
+	font-size: 12px;
 }
