--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ code {
 
 nav {
 	width: 100%;
-	height: 8vh;
+	height: 50px;
 	position: fixed;
 	top: 0;
 	background-color: rgb(218, 218, 218);
@@ -69,7 +69,7 @@ nav {
 }
 
 .nav-logo {
-	height: 5vh;
+	height: 40px;
 	width: auto;
 }
 
@@ -296,7 +296,7 @@ nav {
 
 /* Send eth */
 #exchange_cont {
-	margin-top: 15vh;
+	margin-top: 90px;
 }
 .exchange_filters {
 	display: flex;
@@ -443,7 +443,7 @@ nav {
 	justify-content: center;
 }
 .logContainer {
-	margin-top: 15vh;
+	margin-top: 90px;
 	text-align: center;
 	background-color: var(--gray-element);
 	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
@@ -465,7 +465,9 @@ nav {
 }
 
 /* Bookmarks */
-
+.bookmarks-page {
+	margin-top: 50px;
+}
 /* Cards */
 #card_image {
 	width: 100%;
