--- a/src/index.css
+++ b/src/index.css
@@ -43,11 +43,27 @@ nav {
 }
 
 footer{
-	width: 100%;
-	height: 50px;
 	position: fixed;
+	height: 30px;
+	width: 100%;
 	bottom: 0;
+	left: 0;
 	background-color: rgb(218, 218, 218);
+	z-index: 2;
+}
+
+footer>ul{
+	list-style-type: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	margin: 0;
+	padding: 0;
 }
 
 .nav-bar {
@@ -221,7 +237,7 @@ footer{
 	grid-template-columns: repeat(4, 1fr);
 	grid-gap: 10px; /* even spacing using grid-gap, You can use percentage values if you want*/
 	padding: 10px;
-	height: 80vh;
+	height: 77vh;
 	overflow-y:scroll;
 }
 
@@ -248,11 +264,42 @@ footer{
 	align-items: center;
 	flex-direction: column;
 	width: 100%;
-	height: 50vh;
+	height: 55vh;
 	margin-right: 20px;
 }
 
-.card-container>#selectedCoin{
+.selectTimeframe{
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	height: 20px;
+	justify-content: center;
+	align-items: center;
+	list-style: none;
+	margin-top: 10px;
+	margin-right: 30px;
+}
+
+.selectTimeframe>li{
+	margin: 10px;
+	font-size: small;
+}
+
+.selectTimeframe>li>button{
+	background-color: rgba(255, 255, 255, 0);
+	border: 0px;
+	text-decoration: underline;
+}
+
+.selectTimeframe>li>button:hover{
+	text-decoration: none;
+}
+
+.clicked{
+	text-decoration: none !important;
+}
+
+#selectedCoin{
 	width: 100%;
 	color: black;
 	text-align: center;
