--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ nav {
 	z-index: 2;
 }
 
-footer{
+footer {
 	width: 100%;
 	height: 50px;
 	position: fixed;
@@ -222,24 +222,22 @@ footer{
 	grid-gap: 10px; /* even spacing using grid-gap, You can use percentage values if you want*/
 	padding: 10px;
 	height: 80vh;
-	overflow-y:scroll;
+	overflow-y: scroll;
 }
 
-
 .card-container::-webkit-scrollbar {
-    width: 5px;
+	width: 5px;
 }
 
 .card-container::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
 }
 
 .card-container::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
-
 
 .chart-container {
 	grid-area: chart;
@@ -252,7 +250,7 @@ footer{
 	margin-right: 20px;
 }
 
-.card-container>#selectedCoin{
+.card-container > #selectedCoin {
 	width: 100%;
 	color: black;
 	text-align: center;
@@ -502,7 +500,7 @@ footer{
 }
 .circle-tile {
 	text-align: center;
-
+	margin-bottom: 5px;
 	flex: 0 0 auto;
 }
 .scrolling-wrapper {
@@ -518,36 +516,37 @@ footer{
 .circle-tile-image-cont {
 	border-radius: 100%;
 	color: #ffffff;
-	margin: 0 auto -40px;
+	margin: 0 auto -30px;
 	position: relative;
-	width: 80px;
-	height: 80px;
+	width: 60px;
+	height: 60px;
 	background-color: whitesmoke;
 }
 
 .circle-tile-heading {
 	display: flex;
 	justify-content: center;
-	width: 150px;
+	width: 130px;
 }
 .circle-tile-image:hover {
 	-webkit-filter: brightness(50%);
 	filter: brightness(50%);
 }
 .circle-tile-content {
-	padding-top: 40px;
+	padding-top: 28px;
 	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 	border-radius: 5px;
-	width: 150px;
+	width: 130px;
 }
 .circle-tile-title {
-	font-size: 25px;
+	font-size: 22px;
 	text-transform: uppercase;
 }
 .circle-tile-footer {
 	background-color: rgba(0, 0, 0, 0.1);
 	display: block;
 	padding: 5px;
+	font-size: 13px;
 	transition: all 0.3s ease-in-out 0s;
 }
 .circle-tile-footer:hover {
@@ -556,12 +555,12 @@ footer{
 	cursor: pointer;
 }
 .card-num {
-	font-size: 15px;
-}
-.card-num-label {
 	font-size: 12px;
 }
-
-#fav{
+.card-num-label {
+	font-size: 14px;
+	font-weight: 500;
+}
+#fav {
 	filter: invert(1);
 }
