--- a/src/index.css
+++ b/src/index.css
@@ -198,48 +198,90 @@ footer > ul {
 }
 .market-page {
 	width: 100%;
-	height: 92vh;
-	padding-top: 8vh;
-	display: grid;
-	grid-template-areas:
-		'search search total'
-		'card card total'
-		'card card chart'
-		'card card chart'
-		'card card chart'
-		'card card chart';
-	grid-gap: 2%;
-}
-
-.search-container {
-	grid-area: search;
+	margin-top: 9vh;
+	height: 91vh;
 	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 7vh;
-	width: 100%;
-}
-
-.totals-container {
-	grid-area: total;
-	display: flex;
-	justify-content: center;
+	justify-content: space-evenly;
 	align-items: center;
 	flex-direction: column;
+}
+
+.data-container{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row;
 	width: 100%;
 	height: 35vh;
 }
 
-.card-container {
-	grid-area: card;
+.search-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 4vh;
 	width: 100%;
+}
+
+.search-container>input {
+	width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.totals-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	height: 25vh;
+	border: .5px solid #ccc;
+	padding: 10px;
+	border-radius: 10px;
+}
+
+.totals-container>p {
+	text-align: center; 
+	font-size: 12px;
+}
+
+.card-container {
+	width: 75%;
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(5, 1fr);
 	grid-gap: 10px; /* even spacing using grid-gap, You can use percentage values if you want*/
 	padding: 10px;
-	height: 77vh;
+	height: 47vh;
 	overflow-y: scroll;
 }
+@media screen and (max-width: 1200px){
+	.card-container {
+		grid-template-columns: repeat(4, 1fr);
+	}
+}
+@media screen and (max-width: 900px){
+	.card-container {
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+@media screen and (max-width: 700px){
+	.card-container {
+		width: 100%;
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
+@media screen and (max-width: 550px){
+	.card-container {
+		width: 100%;
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
 
 .card-container::-webkit-scrollbar {
 	width: 5px;
@@ -256,14 +298,14 @@ footer > ul {
 }
 
 .chart-container {
-	grid-area: chart;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	width: 100%;
-	height: 55vh;
+	height: 35vh;
 	margin-right: 20px;
+	padding: 0;
+	margin: 0;
 }
 
 .selectTimeframe {
@@ -274,7 +316,6 @@ footer > ul {
 	justify-content: center;
 	align-items: center;
 	list-style: none;
-	margin-top: 10px;
 	margin-right: 30px;
 }
 
@@ -301,66 +342,6 @@ footer > ul {
 	width: 100%;
 	color: black;
 	text-align: center;
-}
-
-.crypto-card {
-	margin: auto;
-	padding: 10px;
-	display: grid;
-	grid-template-areas:
-		'name name favorite image'
-		'hr hr hr x'
-		'price price price x'
-		'market market market x'
-		'change change change x';
-	width: 210px;
-	height: 200px;
-	border: 2px solid black;
-	cursor: pointer;
-}
-
-.crypto-card > * {
-	margin: 0;
-	padding: 0;
-}
-
-.crypto-card > button {
-	grid-area: favorite;
-	width: 40px;
-	height: 20px;
-	font-size: 10px;
-}
-
-.crypto-card > h5 {
-	grid-area: name;
-	font-size: small;
-}
-
-.crypto-card > img {
-	grid-area: image;
-	width: 15px;
-	height: 15px;
-}
-
-.crypto-card > hr {
-	grid-area: hr;
-}
-
-.crypto-card > #price {
-	grid-area: price;
-}
-
-.crypto-card > #market {
-	grid-area: market;
-}
-
-.crypto-card > #change {
-	grid-area: change;
-}
-
-.crypto-card > p {
-	font-size: 14px;
-	text-decoration: underline;
 }
 
 /*-- Exchange --*/
