--- a/src/index.css
+++ b/src/index.css
@@ -242,6 +242,7 @@ footer > ul {
 	border: .5px solid #ccc;
 	padding: 10px;
 	border-radius: 10px;
+	box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
 }
 
 .totals-container>p {
@@ -306,13 +307,13 @@ footer > ul {
 	margin-right: 20px;
 	padding: 0;
 	margin: 0;
+	
 }
 
 .selectTimeframe {
 	display: flex;
-	flex-direction: row;
-	width: 100%;
-	height: 20px;
+	flex-direction: column;
+	height: 35vh;
 	justify-content: center;
 	align-items: center;
 	list-style: none;
@@ -325,17 +326,20 @@ footer > ul {
 }
 
 .selectTimeframe > li > button {
-	background-color: rgba(255, 255, 255, 0);
-	border: 0px;
-	text-decoration: underline;
+	background-color: hsl(204, 63%, 59%);
+	border: .5px solid rgba(0, 0, 0, 0.158);
+	width: 40px;
+	border-radius: 10px;
+	color: white;
+	box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
 }
 
 .selectTimeframe > li > button:hover {
-	text-decoration: none;
+	border: .5px solid rgb(0, 0, 0);
 }
 
 .clicked {
-	text-decoration: none !important;
+	color: black !important;
 }
 
 #selectedCoin {
