--- a/src/index.css
+++ b/src/index.css
@@ -539,6 +539,11 @@ footer > ul {
 .bookmarks-page {
 	margin-top: 50px;
 }
+.bookmarks-loader {
+	margin-top: 50vh;
+	display: flex;
+	justify-content: center;
+}
 /* Cards */
 #card_image {
 	width: 100%;
@@ -592,6 +597,8 @@ footer > ul {
 .circle-tile-footer {
 	background-color: rgba(0, 0, 0, 0.1);
 	display: block;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
 	padding: 5px;
 	font-size: 13px;
 	transition: all 0.3s ease-in-out 0s;
@@ -610,4 +617,53 @@ footer > ul {
 }
 #fav {
 	filter: invert(1);
+}
+/* Swap Bookmarks */
+#swap-cont {
+	margin-top: 20px;
+}
+.swap-bookmark {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 150px;
+	height: 120px;
+	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+	border-radius: 5px;
+	margin: 10px;
+}
+.swap-bookmark-header {
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+
+	padding: 3px;
+}
+.swap-bookmark-header,
+.swap-bookmark-footer {
+	background-color: rgba(0, 0, 0, 0.1);
+	display: block;
+	font-size: 13px;
+	text-align: center;
+	transition: all 0.3s ease-in-out 0s;
+}
+.swap-bookmark-header:hover,
+.swap-bookmark-footer:hover {
+	background-color: rgba(0, 0, 0, 0.4);
+	color: white;
+	cursor: pointer;
+}
+.swap-bookmark-footer {
+	width: 100%;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+.swap-bookmark-body {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+.swap-card-crypto-img {
+	width: 40px;
+	margin: 10px;
 }
