--- a/src/index.css
+++ b/src/index.css
@@ -238,11 +238,14 @@ footer > ul {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	height: 25vh;
+	height: 20vh;
 	border: .5px solid #ccc;
 	padding: 10px;
 	border-radius: 10px;
-	box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
+	box-shadow: 1px 2px 1px rgba(0,0,0,0.3);
+	margin-left: 20px;
+	background-color: hsl(204, 63%, 59%);
+	color: white;
 }
 
 .totals-container>p {
@@ -304,7 +307,6 @@ footer > ul {
 	align-items: center;
 	flex-direction: column;
 	height: 35vh;
-	margin-right: 20px;
 	padding: 0;
 	margin: 0;
 	
@@ -317,11 +319,11 @@ footer > ul {
 	justify-content: center;
 	align-items: center;
 	list-style: none;
-	margin-right: 30px;
+	margin-right: 10px;
 }
 
 .selectTimeframe > li {
-	margin: 10px;
+	margin-top: 10px;
 	font-size: small;
 }
 
